still trying to fix the header alignment

--- a/sass/components/content/_header.scss
+++ b/sass/components/content/_header.scss
@@ -4,9 +4,10 @@
   width: 100%;
 
   .header-container {
-    display: flex;
-    align-items: center; // Align items vertically
-    justify-content: space-between; // Space between branding and menu
+    display: flex; /* Use flexbox */
+    justify-content: space-between; /* Space out children */
+    align-items: center; /* Center vertically */
+    padding: 1rem;
   }
 
   a {
@@ -25,8 +26,6 @@
   }
 
   .site-branding {
-    padding: 2.5rem 1rem 2.25rem 1rem;
-
     a {
       display: inline-block;
     }
@@ -34,6 +33,7 @@
     img {
       max-width: 100%;
       height: 1.5rem;
+      margin: 1rem;
     }
 
     .site-title,
@@ -42,15 +42,32 @@
     }
   }
 
+  .site-title {
+    font-size: 1.875rem;
+    margin: 0;
+  }
+
+  .site-description {
+    margin: 0;
+  }
+
   @media screen and (min-width: 50em) {
+
     .header-container {
-      display: flex;
-      align-items: center;
-      justify-content: space-between; // Ensure branding and menu are on the same line
+      justify-content: space-between;
     }
 
-    .site-branding {
-      max-width: 50%;
+    .main-navigation {
+      display: flex;
+    }
+
+    .header-menu {
+      display: flex;
+    }
+
+    .main-navigation ul {
+      flex-direction: row;
+      justify-content: flex-end;
     }
   }
 }
