--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -1,8 +1,8 @@
 .main-navigation {
-	display: block;
+	// display: block;
 
 	.header-menu {
-	  display: none;
+		display: none;
 	}
 
 	ul {
@@ -48,41 +48,43 @@
 	}
   }
 
-  /* Small menu */
-  .menu-toggle,
-  .main-navigation.toggled ul {
-	display: block;
-  }
 
-  .menu-toggle {
+/* Small menu */
+.menu-toggle,
+.main-navigation.toggled ul {
+  display: block;
+}
+
+
+.menu-toggle {
 	position: absolute;
-	top: 3.5rem;
-	right: 0.5rem;
-	display: block;
-	padding: 1rem;
-	margin: 0;
-	border: none;
-	background: transparent;
+    top: 2.5rem;
+    right: 0.5rem;
+    display: block;
+    padding: 1rem;
+    margin: 0;
+    border: none;
+    background: transparent;
 	z-index: 999;
 
-	img {
-	  width: 2rem;
-	  height: auto;
-	}
-
-	&:focus {
-	  outline: 2px solid #000;
-	}
+  img {
+    width: 2rem;
+    height: auto;
   }
 
-  @media screen and (min-width: 50em) {
+  &:focus {
+    outline: 2px solid #000;
+  }
+}
+
+@media screen and (min-width: 50em) {
 	.menu-toggle {
 	  display: none;
 	}
 
 	.main-navigation .header-menu {
-	  display: flex;
-	}
+		display: flex;
+	  }
 
 	.main-navigation ul {
 	  flex-direction: row;
@@ -90,23 +92,25 @@
 	}
   }
 
-  .comment-navigation,
-  .posts-navigation,
-  .post-navigation {
-	.site-main & {
-	  margin: 0 0 1.5em;
-	}
 
-	.nav-links {
-	  display: flex;
-	}
-
-	.nav-previous {
-	  flex: 1 0 50%;
-	}
-
-	.nav-next {
-	  text-align: end;
-	  flex: 1 0 50%;
-	}
+.comment-navigation,
+.posts-navigation,
+.post-navigation {
+  .site-main & {
+    margin: 0 0 1.5em;
   }
+
+  .nav-links {
+    display: flex;
+  }
+
+  .nav-previous {
+    flex: 1 0 50%;
+  }
+
+  .nav-next {
+    text-align: end;
+    flex: 1 0 50%;
+  }
+}
+
