--- a/style.css
+++ b/style.css
@@ -620,9 +620,6 @@ textarea {
 --------------------------------------------------------------*/
 /* Navigation
 --------------------------------------------- */
-.main-navigation {
-	display: block;
-}
 .main-navigation .header-menu {
 	display: none;
 }
@@ -662,7 +659,7 @@ textarea {
 
 .menu-toggle {
 	position: absolute;
-	top: 3.5rem;
+	top: 2.5rem;
 	right: 0.5rem;
 	display: block;
 	padding: 1rem;
@@ -849,9 +846,10 @@ textarea {
 	width: 100%;
 }
 .site-header .header-container {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	display: flex; /* Use flexbox */
+	justify-content: space-between; /* Space out children */
+	align-items: center; /* Center vertically */
+	padding: 1rem;
 }
 .site-header a {
 	color: #fff;
@@ -865,28 +863,38 @@ textarea {
 	text-transform: uppercase;
 	font-weight: 900;
 }
-.site-header .site-branding {
-	padding: 2.5rem 1rem 2.25rem 1rem;
-}
 .site-header .site-branding a {
 	display: inline-block;
 }
 .site-header .site-branding img {
 	max-width: 100%;
 	height: 1.5rem;
+	margin: 1rem;
 }
 .site-header .site-branding .site-title,
 .site-header .site-branding .site-description {
 	margin: 0;
 }
+.site-header .site-title {
+	font-size: 1.875rem;
+	margin: 0;
+}
+.site-header .site-description {
+	margin: 0;
+}
 @media screen and (min-width: 50em) {
 	.site-header .header-container {
-		display: flex;
-		align-items: center;
 		justify-content: space-between;
 	}
-	.site-header .site-branding {
-		max-width: 50%;
+	.site-header .main-navigation {
+		display: flex;
+	}
+	.site-header .header-menu {
+		display: flex;
+	}
+	.site-header .main-navigation ul {
+		flex-direction: row;
+		justify-content: flex-end;
 	}
 }
 
